--- a/public_html/.htaccess
+++ b/public_html/.htaccess
@@ -12,3 +12,9 @@
   # Redirigir todo a index.html
   RewriteRule . /index.html [L]
 </IfModule>
+
+# Configurar MIME types correctos
+<IfModule mod_mime.c>
+  AddType application/manifest+json .webmanifest
+  AddType image/x-icon .ico
+</IfModule>
